--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "emailjs-com": "^3.2.0",
+    "fluent-ffmpeg": "^2.1.2",
     "react": "^17.0.2",
     "react-animejs": "^0.5.6",
     "react-dom": "^17.0.2",
