--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.24.0",
     "emailjs-com": "^3.2.0",
     "fluent-ffmpeg": "^2.1.2",
     "react": "^17.0.2",
@@ -15,7 +16,6 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "react-twitter-widgets": "^1.10.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
