--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.26.1",
     "emailjs-com": "^3.2.0",
     "next": "^12.1.0",
+    "puppeteer": "^13.5.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
