--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
     "react-icons": "^4.3.1",
     "react-image-gallery": "^1.2.7",
     "sass": "^1.49.9"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.12",
+    "postcss": "^8.4.17",
+    "tailwindcss": "^3.1.8"
   }
 }
